<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="101dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="520dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/name"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="455dp"
        android:autofillHints="Enter Name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="300dp"
        android:autofillHints="Enter Email Address or phone"
        android:ems="10"
        android:hint="@string/email_or_phone"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="220dp"
        android:autofillHints="Enter Date of Birth"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/city"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="200dp"
        android:autofillHints="Enter City"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/state"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="110dp"
        android:autofillHints="Enter state"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="50dp"
        android:autofillHints="Enter Password"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="Re-Enter Password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>